# bomberhuman

./: .gitignore  Cargo.toml  README.md
docs/: 0.bootstrap.js  bootstrap.js  index.html  package-lock.json
docs/demo/: 0.bootstrap.js  bootstrap.js
src/: game_state.rs  lib.rs
src/controllers/: #collisions.rs#  collisions.rs  input.rs  mod.rs  updater.rs
src/geometry/: point.rs
src/javascript/: draw.js
src/models/: bomb.rs  fire.rs  item.rs  mod.rs  player.rs  sblock.rs  wall.rs  world.rs
www/: index.html  index.js  package.json  webpack.config.js
