[package]
name = "bomber-human-test"
version = "0.1.0"
authors = ["nakaono0424 <p77m9fjo@s.okayama-u.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
itertools-num = "0.1.1"
rand = "0.3.18"
pcg_rand = "0.7.1"
console_error_panic_hook = {version = "0.1.1", optional = true}
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
